Header+Cart+Footer: Improve layouts and styling.
This also fixes a few logic issues and improves the automatic `light` /
`dark` color generation from the base accent color(s). (TODO: This
should be configurable).

--- a/apps/web/src/components/Footer/footer.module.scss
+++ b/apps/web/src/components/Footer/footer.module.scss
@@ -21,7 +21,7 @@
             height: 2.75rem;
             width: auto;
 
-            imng {
+            img {
                 height: 100%;
                 width: 100%;
                 object-fit: contain;
