--- a/apps/web/src/components/Header/cart-button.module.scss
+++ b/apps/web/src/components/Header/cart-button.module.scss
@@ -5,8 +5,8 @@
     justify-content: center;
     align-items: center;
     height: 100%;
-    max-height: 4rem;
-    padding: var(--block-padding) 0;
+    max-height: 4.25rem;
+    padding: var(--block-padding-small) 0;
     font-size: 3rem;
     font-weight: 400;
     line-height: 1;
@@ -18,8 +18,12 @@
 
     svg {
         vertical-align: middle;
-        font-size: 1em;
+        font-size: 0.9em;
         line-height: 1;
+
+        @media (min-width: $breakpoint-mobile) {
+            font-size: 1em;
+        }
     }
 
     .quantity {
@@ -31,22 +35,22 @@
     }
 
     @media (min-width: $breakpoint-mobile) {
-        padding: var(--block-padding-small) 0;
         max-height: 3.5rem;
         font-size: 2.5rem;
     }
 
     &[data-items]:not([data-items='0']) {
-        gap: var(--block-padding);
-        padding: var(--block-padding-small) var(--block-padding-large);
+        gap: var(--block-spacer-small);
+        padding: var(--block-padding-small) calc(var(--block-padding) * 1.25);
         background-color: var(--accent-primary);
         color: var(--accent-primary-text);
         border-radius: 5rem;
-        font-size: 2.5rem;
+        font-size: 2.25rem;
 
         @media (min-width: $breakpoint-mobile) {
-            font-size: 2.15rem;
+            gap: var(--block-padding);
             padding: var(--block-padding-small) var(--block-padding);
+            font-size: 2.15rem;
         }
 
         .quantity {
