--- a/apps/web/src/scss/_globals.scss
+++ b/apps/web/src/scss/_globals.scss
@@ -1,2 +1,3 @@
-@import './_variables.scss';
-@import './_accent.scss';
+@import './animations.scss';
+@import './variables.scss';
+@import './accent.scss';
