Design: Disable legacy carousel styling,

--- a/apps/web/src/scss/app.scss
+++ b/apps/web/src/scss/app.scss
@@ -4,7 +4,7 @@
 //@use '_globals.scss' as *;
 
 // Components
-@import './carousel.scss';
+// @import './carousel.scss';
 
 :root {
     --color-bright: #fefefe;
