--- a/apps/web/src/app/(admin)/_components/header.module.scss
+++ b/apps/web/src/app/(admin)/_components/header.module.scss
@@ -7,8 +7,8 @@
     justify-content: center;
     align-items: center;
     max-width: 100vw;
-    padding: var(--block-padding) 0;
-    margin-bottom: var(--block-padding);
+    padding: var(--layout-block-padding) 0;
+    margin-bottom: var(--layout-block-padding);
     border-bottom: var(--block-border-width) solid var(--color-background-highlight);
     backdrop-filter: saturate(220%) blur(8px);
     background-color: rgba(0, 0, 0, 0.75);
@@ -25,11 +25,11 @@
         width: calc(100vw - calc(var(--layout-page-spacing) * 2));
         max-width: var(--layout-page-width);
         margin: 0 var(--layout-page-spacing);
-        gap: var(--block-padding);
+        gap: var(--layout-block-padding);
 
         @media (min-width: 950px) {
             grid-template-columns: 1fr auto;
-            padding: var(--block-padding) 0;
+            padding: var(--layout-block-padding) 0;
         }
 
         .logo-wrapper {
@@ -64,7 +64,7 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            gap: var(--block-padding);
+            gap: var(--layout-block-padding);
             width: 100%;
             user-select: none;
 
@@ -72,7 +72,7 @@
                 display: flex;
                 justify-content: flex-start;
                 align-items: center;
-                gap: var(--block-padding);
+                gap: var(--layout-block-padding);
 
                 @media (min-width: 950px) {
                     justify-content: center;
