--- a/apps/web/src/app/(admin)/_scss/app.scss
+++ b/apps/web/src/app/(admin)/_scss/app.scss
@@ -7,7 +7,7 @@ body {
     margin: 0;
     
     background: #000000;
-    foreground: #fefefe;
+    color: #fefefe;
 
     font-family: var(--font-primary);
     font-weight: 500;
