Deps: Add highlight analytics.

--- a/apps/web/src/app/(admin)/admin/(auth)/login/page.module.scss
+++ b/apps/web/src/app/(admin)/admin/(auth)/login/page.module.scss
@@ -9,7 +9,7 @@
         grid-auto-columns: 1fr;
         justify-content: flex-start;
         align-items: flex-start;
-        gap: calc(var(--block-padding) / 2);
+        gap: calc(var(--layout-block-padding) / 2);
 
         @media (min-width: 950px) {
             grid-auto-columns: auto;
