--- a/apps/web/src/app/(admin)/admin/docs/errors/[code]/page.module.scss
+++ b/apps/web/src/app/(admin)/admin/docs/errors/[code]/page.module.scss
@@ -7,7 +7,7 @@
         max-width: 100%;
 
         h1 {
-            margin: calc(var(--block-padding) / 4) 0 var(--block-padding) 0;
+            margin: calc(var(--layout-block-padding) / 4) 0 var(--layout-block-padding) 0;
 
             @media (max-width: 950px) {
                 font-size: 3.25rem !important;
@@ -26,14 +26,14 @@
     .content {
         display: flex;
         flex-direction: column;
-        gap: calc(var(--block-padding) / 2);
+        gap: calc(var(--layout-block-padding) / 2);
         width: 100%;
         max-width: 100%;
         margin-top: calc(var(--layout-section-spacing) * 2);
 
         section {
             max-width: 100%;
-            margin: 0 0 calc(var(--block-padding) / 2) 0;
+            margin: 0 0 calc(var(--layout-block-padding) / 2) 0;
 
             code {
                 word-break: break-all;
@@ -44,14 +44,14 @@
         }
 
         h3 {
-            margin: 0 0 var(--block-padding) 0;
+            margin: 0 0 var(--layout-block-padding) 0;
             font-size: 1em;
         }
 
         p,
         ul {
             font-size: inherit;
-            margin: 0 0 calc(var(--block-padding) / 2) 0;
+            margin: 0 0 calc(var(--layout-block-padding) / 2) 0;
             line-height: normal;
         }
 
@@ -60,14 +60,14 @@
 
             li::before {
                 content: '-';
-                padding: 0 calc(var(--block-padding) / 2);
+                padding: 0 calc(var(--layout-block-padding) / 2);
                 font-weight: 700;
             }
         }
 
         img {
             max-width: 100%;
-            margin: calc(var(--block-padding) / 2) 0;
+            margin: calc(var(--layout-block-padding) / 2) 0;
         }
 
         & :is(:last-child) {
