--- a/apps/web/src/app/(admin)/admin/page.module.scss
+++ b/apps/web/src/app/(admin)/admin/page.module.scss
@@ -3,7 +3,7 @@
         overflow: hidden;
         display: flex;
         flex-direction: column;
-        gap: calc(var(--block-padding) / 2);
+        gap: calc(var(--layout-block-padding) / 2);
         width: 100%;
         max-width: 100%;
     }
@@ -18,14 +18,14 @@
             display: grid;
             grid-template-columns: repeat(auto-fill, minmax(18rem, 1fr));
             grid-auto-rows: 1fr;
-            gap: var(--block-padding);
+            gap: var(--layout-block-padding);
             width: 100%;
             max-width: 100%;
 
             .block {
                 display: flex;
                 flex-direction: column;
-                gap: var(--block-padding);
+                gap: var(--layout-block-padding);
 
                 a {
                     width: fit-content;
