--- a/apps/web/src/app/(admin)/admin/(dashboard)/shop/page.module.scss
+++ b/apps/web/src/app/(admin)/admin/(dashboard)/shop/page.module.scss
@@ -3,3 +3,17 @@
     flex-direction: column;
     gap: var(--layout-section-padding);
 }
+
+.shops {
+    display: flex;
+}
+
+.blocks {
+    display: flex;
+
+    .block {
+        display: flex;
+        flex-direction: column;
+        gap: calc(var(--layout-block-padding) / 2);
+    }
+}
