--- a/apps/web/src/app/(shops)/_components/footer.module.scss
+++ b/apps/web/src/app/(shops)/_components/footer.module.scss
@@ -1,5 +1,14 @@
 @import '../_scss/global';
 
+.footer {
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: auto 1fr;
+    width: 100%;
+    max-width: 100vw;
+    max-width: 100dvw;
+}
+
 .container,
 .copyrights {
     display: flex;
@@ -14,7 +23,7 @@
     color: var(--color-foreground);
 
     .content {
-        width: calc(100vw - calc(var(--layout-page-spacing) * 2));
+        width: 100%;
         max-width: var(--layout-page-width);
         margin: 0 var(--layout-page-spacing);
         padding: var(--layout-section-padding) 0;
