--- a/apps/web/src/app/(shops)/_components/header.module.scss
+++ b/apps/web/src/app/(shops)/_components/header.module.scss
@@ -6,7 +6,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    max-width: 100vw;
+    width: 100%;
     padding: var(--layout-block-padding) 0;
     margin-bottom: var(--layout-block-padding);
     border-bottom: var(--block-border-width) solid var(--color-background-highlight);
@@ -22,9 +22,10 @@
         display: grid;
         grid-template-columns: 1fr;
         align-items: center;
-        width: calc(100vw - calc(var(--layout-page-spacing) * 2));
-        max-width: var(--layout-page-width);
+        width: var(--layout-page-width);
+        max-width: 100%;
         margin: 0 var(--layout-page-spacing);
+        padding: 0 var(--layout-page-spacing);
         gap: var(--layout-block-padding);
 
         @media (min-width: 950px) {
