--- a/apps/web/src/app/(shops)/_scss/app.scss
+++ b/apps/web/src/app/(shops)/_scss/app.scss
@@ -5,7 +5,12 @@ html,
 body {
     padding: 0;
     margin: 0;
-    
+}
+
+body {
+    overflow-x: hidden;
+    max-width: 100%;
+
     background: #000000;
     color: #fefefe;
 
@@ -15,6 +20,18 @@ body {
     [data-sonner-toaster] {
         font-family: inherit;
     }
+}
+body {
+    display: grid;
+    width: 100%;
+    grid-template-rows: auto minmax(calc(100vh - 14rem), auto) auto;
+    grid-template-columns: 100%;
+    align-items: flex-start;
+    justify-content: center;
+}
+
+* {
+    box-sizing: border-box;
 }
 
 :root {
