Cart: Fix infinite calling.

--- a/apps/web/src/components/Footer/footer.module.scss
+++ b/apps/web/src/components/Footer/footer.module.scss
@@ -38,5 +38,9 @@
         .social-icon {
             aspect-ratio: 1 / 1;
         }
+
+        .status-badge {
+            display: block;
+        }
     }
 }
