--- a/apps/web/src/components/products/collection-block.module.scss
+++ b/apps/web/src/components/products/collection-block.module.scss
@@ -16,6 +16,10 @@
         grid-auto-rows: 1fr;
         grid-template-columns: 1fr 1fr;
 
+        @media (max-width: $breakpoint-mobile) {
+            --component-product-card-width: auto;
+        }
+
         @media (min-width: $breakpoint-mobile) {
             justify-content: start;
             gap: var(--block-spacer);
