--- a/apps/web/src/scss/app.scss
+++ b/apps/web/src/scss/app.scss
@@ -7,12 +7,16 @@
 // @import './carousel.scss';
 
 :root {
+    --fallback-font: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Ubuntu, Cantarell, 'Helvetica Neue',
+    sans-serif;
+
     --color-bright: #fefefe;
     --color-dark: #101418;
     --color-dark-secondary: #555555;
 
     --color-sale: #b51200;
     --color-danger: #a53d3a;
+    --color-danger-dark: #7c2e2b;
 
     --color-lights-out: #051821;
 
@@ -44,19 +48,10 @@ body {
     max-width: 100vw;
     padding: 0;
     margin: 0;
+
     font-size: 0.65rem;
-    font-family:
-        var(--font-primary, system-ui),
-        -apple-system,
-        BlinkMacSystemFont,
-        'Segoe UI',
-        Roboto,
-        Oxygen,
-        Ubuntu,
-        Cantarell,
-        'Open Sans',
-        'Helvetica Neue',
-        sans-serif;
+    font-family: var(--font-primary, var(--fallback-font));
+
     color: var(--color-foreground, var(--color-dark));
     background: var(--color-background, var(--color-bright));
 
@@ -113,8 +108,28 @@ body {
         }
     }
 
-    [data-sonner-toaster] {
+    ol li:is([data-sonner-toaster], .toast-notification):is([data-styled='true'], [data-styled='false']) {
+        padding: var(--block-padding-large);
+
         font-family: var(--font-primary);
+        font-size: 1.25rem;
+        line-height: normal;
+
+        background-color: var(--color-accent-primary);
+
+        border-width: var(--block-border-width);
+        border-color: var(--color-accent-primary-dark);
+        border-radius: var(--block-border-radius);
+
+        &[data-type='error'] {
+            background-color: var(--color-danger);
+
+            border-color: var(--color-danger-dark);
+        }
+
+        [data-icon] {
+            width: 2rem;
+        }
     }
 }
 
