--- a/apps/web/src/scss/app.scss
+++ b/apps/web/src/scss/app.scss
@@ -7,8 +7,8 @@
 // @import './carousel.scss';
 
 :root {
-    --fallback-font: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Ubuntu, Cantarell, 'Helvetica Neue',
-    sans-serif;
+    --fallback-font: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Ubuntu, Cantarell,
+        'Helvetica Neue', sans-serif;
 
     --color-bright: #fefefe;
     --color-dark: #101418;
