--- a/apps/web/src/components/Footer/footer.module.scss
+++ b/apps/web/src/components/Footer/footer.module.scss
@@ -7,7 +7,8 @@
     width: 100%;
     background: var(--accent-primary-dark);
     color: var(--accent-primary-text);
-    padding-top: 1rem;
+    padding-top: 2rem;
+    padding-bottom: 6rem;
 
     .content {
         display: grid;
