--- a/apps/web/src/components/typography/pricing.module.scss
+++ b/apps/web/src/components/typography/pricing.module.scss
@@ -21,7 +21,7 @@
         line-height: 1;
         font-weight: 700;
 
-        .sale {
+        &.sale {
             color: var(--color-sale);
         }
     }
