Design: Fix minor issues here and there.
This also attempts to fix collections being unbearably slow to draw.

--- a/apps/web/src/components/Header/cart-button.module.scss
+++ b/apps/web/src/components/Header/cart-button.module.scss
@@ -11,10 +11,14 @@
     font-weight: 400;
     line-height: 1;
     text-align: center;
-    transition:
-        250ms ease-in-out all,
-        150ms ease-in-out color,
-        150ms ease-in-out background-color;
+
+    &,
+    &:not(:disabled) {
+        transition:
+            250ms ease-in-out all,
+            150ms ease-in-out color,
+            150ms ease-in-out background-color;
+    }
 
     svg {
         vertical-align: middle;
