--- a/apps/web/src/components/Header/hamburger-menu.module.scss
+++ b/apps/web/src/components/Header/hamburger-menu.module.scss
@@ -24,7 +24,7 @@
         vertical-align: middle;
     }
 
-    @media (min-width: $breakpoint-tablet-medium) {
+    @media (min-width: $breakpoint-header) {
         display: none;
     }
 }
