--- a/apps/web/src/components/Header/header.module.scss
+++ b/apps/web/src/components/Header/header.module.scss
@@ -17,7 +17,7 @@
         150ms ease-in-out box-shadow,
         150ms ease-in-out border-color;
 
-    @media (min-width: $breakpoint-tablet-medium) {
+    @media (min-width: $breakpoint-header) {
         border-bottom-width: calc(var(--block-border-width) / 2);
     }
 }
@@ -32,7 +32,7 @@
 
 .content {
     --header-height: 7rem;
-    @media (min-width: $breakpoint-tablet-medium) {
+    @media (min-width: $breakpoint-header) {
         --header-height: 6.5rem;
     }
 
@@ -48,7 +48,7 @@
     margin: 0 auto;
     user-select: none;
 
-    @media (min-width: $breakpoint-tablet-medium) {
+    @media (min-width: $breakpoint-header) {
         padding: 0 var(--block-spacer-large);
         grid-template-columns: 1fr auto 1fr;
         gap: var(--block-spacer-large);
@@ -81,14 +81,14 @@
             border-radius: var(--block-border-radius);
             transition: 150ms ease-in-out background-color;
 
-            @media (min-width: $breakpoint-tablet-medium) {
+            @media (min-width: $breakpoint-header) {
                 &:is(:hover, :focus, :focus-within) {
                     background-color: var(--accent-secondary);
                     outline: none;
                 }
             }
 
-            @media (min-width: $breakpoint-tablet-medium) {
+            @media (min-width: $breakpoint-header) {
                 height: 4rem;
                 transform: translateX(calc(calc(var(--block-padding) - 0.25rem) * -1));
             }
@@ -120,7 +120,7 @@
 
         pointer-events: none;
 
-        @media (min-width: $breakpoint-tablet-medium) {
+        @media (min-width: $breakpoint-header) {
             right: calc(var(--block-spacer-small) * -0.5);
             top: calc(var(--block-spacer-small) * -0.5);
         }
@@ -133,7 +133,7 @@
         gap: 0;
         height: 100%;
 
-        @media (min-width: $breakpoint-tablet-medium) {
+        @media (min-width: $breakpoint-header) {
             gap: var(--block-spacer);
         }
 
