--- a/apps/web/src/slices/common/IconGrid/icon-grid.module.scss
+++ b/apps/web/src/slices/common/IconGrid/icon-grid.module.scss
@@ -41,6 +41,8 @@
                 img {
                     object-fit: contain;
                     object-position: center;
+                    height: 100%;
+                    width: 100%;
                 }
             }
 
