--- a/apps/web/src/components/Header/cart-button.module.scss
+++ b/apps/web/src/components/Header/cart-button.module.scss
@@ -20,17 +20,6 @@
             150ms ease-in-out background-color;
     }
 
-    .icon {
-        width: 2.75rem;
-        height: 4rem;
-        color: inherit;
-        margin-bottom: 0.05rem !important;
-
-        svg {
-            color: inherit;
-        }
-    }
-
     .quantity {
         width: 0;
     }
@@ -59,7 +48,8 @@
         }
 
         .quantity {
-            font-size: 0.85em;
+            font-size: 0.9em;
+            font-weight: 700;
             width: auto;
             padding: 0 0.25rem;
         }
