--- a/apps/web/src/components/Header/cart-button.module.scss
+++ b/apps/web/src/components/Header/cart-button.module.scss
@@ -2,6 +2,7 @@
 
 .container {
     display: flex;
+    flex-grow: 0;
     justify-content: center;
     align-items: center;
     height: 100%;
@@ -32,8 +33,8 @@
         &,
         svg,
         svg.primary.design {
-            color: var(--accent-primary);
-            stroke: var(--accent-primary);
+            color: var(--accent-primary) !important;
+            stroke: var(--accent-primary) !important;
         }
     }
 
