CollectionBlock: Fix repainting issue.
This is done by forcing the engine to create a new layer for the
collection block using a combination of `transform`,
`backface-visibility` and `will-change`.

--- a/apps/web/src/components/products/collection-block.module.scss
+++ b/apps/web/src/components/products/collection-block.module.scss
@@ -16,6 +16,14 @@
         grid-auto-rows: 1fr;
         grid-template-columns: 1fr 1fr;
 
+        // https://stackoverflow.com/a/30533339/3142553
+        transform: translateZ(0);
+        -webkit-transform: translateZ(0);
+        -moz-backface-visibility: hidden;
+        -webkit-backface-visibility: hidden;
+        backface-visibility: hidden;
+        will-change: scroll-position, transform;
+
         @media (min-width: $breakpoint-mobile) {
             justify-content: start;
             gap: var(--block-spacer);
