--- a/apps/web/src/components/Header/cart-button.module.scss
+++ b/apps/web/src/components/Header/cart-button.module.scss
@@ -29,13 +29,10 @@
         width: 0;
     }
 
-    &:is(:hover, :active) {
-        &,
-        svg,
-        svg.primary.design {
-            color: var(--accent-primary) !important;
-            stroke: var(--accent-primary) !important;
-        }
+    svg {
+        color: var(--accent-secondary-text);
+        fill: var(--accent-secondary-text);
+        stroke: var(--accent-secondary-text);
     }
 
     @media (min-width: $breakpoint-mobile) {
@@ -54,6 +51,12 @@
         @media (min-width: $breakpoint-mobile) {
             padding: var(--block-padding-small) var(--block-padding);
             font-size: 2.15rem;
+        }
+
+        svg {
+            color: var(--accent-primary-text);
+            fill: var(--accent-primary-text);
+            stroke: var(--accent-primary-text);
         }
 
         .quantity {
